--- a/src/UI/package.json
+++ b/src/UI/package.json
@@ -18,8 +18,8 @@
     "web-vitals": "^1.1.2"
   },
   "scripts": {
-    "start": "react-scripts start",
-    "build": "react-scripts build",
+    "start": "react-scripts start --env",
+    "build": "react-scripts build --env",
     "test": "react-scripts test",
     "eject": "react-scripts eject"
   },
